--- a/ProvaGitVerifica/MainWindow.xaml
+++ b/ProvaGitVerifica/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="355*"/>
+            <RowDefinition Height="79*"/>
+        </Grid.RowDefinitions>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="301,142,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
     </Grid>
 </Window>
